examples/10_Automatic_Cetificate_Rotation/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: service-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - gamesnews.in
      tls:
        mode: SIMPLE # enables HTTPS on this port
        credentialName: gamesnews-cert
