examples/10_Automatic_Cetificate_Rotation/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-nginx
spec:
  hosts:
    - gamesnews.in
  gateways:
    - service-gateway
  http:
    - match:
        - uri:
            exact: /
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 9090
            host: nginx-service.default.svc.cluster.local
